--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="HTML Media, Semantic, Meta and Script Tags Demo">
+  <meta name="keywords" content="HTML, Media Tags, Semantic Tags">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
     <title>perfumy</title>
     <link rel="icon" href="download (1).jpg">
     <link rel="stylesheet" href="style.css">
@@ -53,4 +57,5 @@
     </div>
     
 </body>
+
 </html>
