--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="header">
 <header>
-        <h1>PERFUMY</h1>
+        <h1>PERFUMY</h1><br>
         <UL>
             <LI>HOME |</LI>
             <LI>PRODUCTS |</LI>
@@ -28,6 +28,9 @@
 
     </div>
     <div class="product">
+        <h1>Perfumy advertisement</h1>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi rem facere ea veritatis animi consequuntur nam facilis aliquam alias assumenda.</p>
+
         <div class="box">
             <img src="download (2).jpg">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi rem facere ea veritatis animi consequuntur nam facilis aliquam alias assumenda.</p>
@@ -59,3 +62,4 @@
 </body>
 
 </html>
+
