--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
     </div>
     <div class="product">
-        <h1>Perfumy advertisement</h1>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi rem facere ea veritatis animi consequuntur nam facilis aliquam alias assumenda.</p>
+        <h1>Perfumy advertisement</h1><br>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi rem facere ea veritatis animi consequuntur nam facilis aliquam alias assumenda.</p><br><br>
 
         <div class="box">
             <img src="download (2).jpg">
@@ -62,4 +62,5 @@
 </body>
 
 </html>
+
 
