--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     </div>
     <div class="product">
-        <h1>Perfumy advertisement</h1><br>
+        <h1>Perfumy advertisement</h1><br><br>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi rem facere ea veritatis animi consequuntur nam facilis aliquam alias assumenda.</p><br><br>
 
         <div class="box">
@@ -62,6 +62,7 @@
 </body>
 
 </html>
+
 
 
 
