--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="header">
 <header>
-        <h1>PERFUMY</h1><br>
+        <h1>PERFUMY</h1><br><br>
         <UL>
             <LI>HOME |</LI>
             <LI>PRODUCTS |</LI>
@@ -62,6 +62,7 @@
 </body>
 
 </html>
+
 
 
 
